Add author on the blog posts

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -66,9 +66,9 @@
           <div class="isLeft">
             <h5 class="index-headline featured"><span>Written by</span></h5>
             <section class="author">
-              <div class="author-image" style="background-image: url({{site.author_image}})">Blog Logo</div>
-              <h4>{{ site.author }}</h4>
-              <p class="bio">{{author.bio}}</p>
+              <div class="author-image" style="background-image: url(/assets/authors/{{ page.author }}.jpg)">Blog Logo</div>
+              <h4>{{ site.authors[page.author].name }}</h4>
+              <p class="bio">{{ site.authors[page.author].bio }}</p>
               <hr>
               <p class="published">Published <time datetime="{{ page.date | date: "%F %R" }}">{{ page.date | date_to_string }}</time></p>
             </section>
